# azure-iot-nvidia-jetson-deepstream-pnp

./: README.md  urn_nvidia_jetson_1.capabilitymodel.json
deepstream/: source1_usb_dec_infer_resnet_int8.txt
deepstream/configs/deepstream-app/: source1_usb_dec_infer_resnet_int8_novisual.txt  source1_usb_dec_infer_resnet_int8_windowed.txt
nvidia-jetson-dcs/: CMakeLists.txt  Readme.md  jetson_impl.h  main.c  pnp_device.h
nvidia-jetson-dcs/utilities/: deepstream_interface.c  deepstream_interface.h  deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_serializer.c  digitaltwin_serializer.h  thermalzones_interface.c
nvidia-jetson-dps/: CMakeLists.txt  Readme.md  jetson_impl.c  main.c  pnp_device.c  pnp_device.h
nvidia-jetson-dps/utilities/: deepstream_interface.c  deepstream_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  thermalzones_interface.c  thermalzones_interface.h
